--- a/kontakt.html
+++ b/kontakt.html
@@ -13,7 +13,8 @@
     .navbar {
       background-color: #006400;
     }
-    .navbar-brand, .nav-link, .navbar-text {
+    .navbar .navbar-brand,
+    .navbar .nav-link {
       color: #fff !important;
     }
     main {
@@ -29,42 +30,37 @@
 </head>
 <body>
 
-  <!-- Nawigacja -->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html">
+      <a class="navbar-brand d-flex align-items-center fw-bold" href="index.html">
         <img src="logoradom.png" alt="Logo RKS Radomiak Radom" width="40" height="40" class="me-2">
         Sklep RKS Radomiak Radom
       </a>
-
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Strona główna</a></li>
           <li class="nav-item"><a class="nav-link" href="index.html#nowosci">Nowości</a></li>
           <li class="nav-item"><a class="nav-link" href="index.html#onas">O nas</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="kontakt.html">Kontakt</a></li>
+          <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt</a></li>
           <li class="nav-item"><a class="nav-link" href="regulamin.html">Regulamin</a></li>          
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Główna sekcja -->
   <main class="container">
     <h1 class="text-center mb-4 text-success fw-bold">Skontaktuj się z nami!</h1>
-    <p class="lead text-center text-muted mb-5">Masz pytania lub potrzebujesz pomocy? </p>
+    <p class="lead text-center text-muted mb-5">Masz pytania lub potrzebujesz pomocy?</p>
 
-    
     <div class="bg-white p-4 shadow-sm rounded">
       <h2 class="fw-bold text-success mb-3">Dane kontaktowe</h2>
-      <ul class="list-unstyled">
-        <li>📧 E-mail: kontakt@radomiak.pl</a></li>
+      <ul class="list-unstyled mb-0">
+        <li>📧 E-mail: kontakt@radomiak.pl</li>
         <li>☏ Telefon: 123-456-789</li>
-        <li>🏢 Adres: ul. Struga 63, 26-600 Radom</li>
+        <li>🏢 Adres: ul. Struga 63, 26-610 Radom</li>
       </ul>
     </div>
 
@@ -73,7 +69,6 @@
     </div>
   </main>
 
-  <!-- Stopka -->
   <footer class="text-center">
     <div class="container">
       <p>📧 kontakt@radomiak.pl | ☎ 123-456-789</p>
